--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster+Two&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+
     <app-root></app-root>
     <script src="https://kit.fontawesome.com/f7a782975f.js"></script>
   </body>
